# noiseanalysis1

./: .gitignore  README.md  howto  main.py  pyproject.toml  settings.json
calnoise/: __init__.py  analyzer.py  edge_noise.py  linewise.py  noise_std.py  psd.py  snr.py
logic/: __init__.py  anisotropic.py  bilateral.py  file_io.py  filter_base.py  fourier.py  linewise.py  nlm.py  notch.py  pipeline.py  richardson_lucy.py  settings.py  wavelet.py  wiener.py
optimize/: __init__.py  grid_search.py  hill_climbing.py  optimizer_base.py  score_function.py
ui/: __init__.py  compare_view.py  filter_tabs.py  main_window.py  noise_panel.py  optimization_settings.py  styles.py
